Quick refactor of performance specs