@@ -39,6 +39,8 @@ test <<= (streams, fullClasspath in Test, outputStrategy in Test, mainTest) map 
   val cpStr = cp map { _.data } mkString delim
   s.log.debug("Running with classpath: " + cpStr)
   val opts2 =
+    Seq("-XX:MaxPermSize=512m") ++
+    Seq("-Xmx2G") ++
     Seq("-classpath", cpStr) ++
     Seq("specs2.run") ++
     Seq(testName)
